--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,8 @@
 <body>
 <h1>Welcome to Index PAGE!</h1>
 
+<button onclick="location.href='/login'">Войти</button>
+<div th:replace="~{logout :: logout}"></div>
 
 </body>
 </html>
