--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Admin page</title>
 </head>
 <body>
-$END$
+
+<table border="2">
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Username</th>
+        <th>Password</th>
+        <th>Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="user : ${users}">
+        <td th:text="${user.id}">ID</td>
+        <td th:text="${user.username}">Username</td>
+        <td th:text="${user.password}">Password</td>
+        <td>
+            <a th:href="@{/admin/user(id=${user.id})}">View</a>
+            <a th:href="@{/admin/{id}/edit(id=${user.id})}" style="margin-left: 10px;">Edit</a>
+            <form th:method="POST" th:action="@{/admin/delete}" style="display: inline; margin-left: 10px;">
+                <input type="hidden" name="id" th:value="${user.id}">
+                <input type="submit" value="Delete">
+            </form>
+        </td>
+    </tr>
+    </tbody>
+</table>
+
+<br/>
+<hr/>
+
+<button onclick="location.href='/admin/new'">Create new user</button>
+<div th:replace="~{logout :: logout}"></div>
 </body>
 </html>
