--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -6,18 +6,15 @@
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/users/new}" th:object="${user}">
-    <label for="name">Enter name: </label>
-    <input type="text" th:field="*{name}" id="name"/>
+<form th:method="POST" th:action="@{/admin/new}" th:object="${user}">
+    <label for="username">Enter name: </label>
+    <input type="text" th:field="*{username}" id="username"/>
     <br/>
-    <label for="email">Enter email: </label>
-    <input type="text" th:field="*{email}" id="email"/>
-    <br/>
-    <label for="age">Enter age: </label>
-    <input type="number" th:field="*{age}" id="age"/>
+    <label for="password">Enter password: </label>
+    <input type="text" th:field="*{password}" id="password"/>
     <br/>
     <input type="submit" value="Create"/>
 </form>
-
+<div th:replace="~{logout :: logout}"></div>
 </body>
 </html>
