Не используй EAGER
• Соблюдай структуру классов: поля -> конструктор -> методы -> ивкилс, хэшкод и туСтринг в самом конце

• У User'а не должно быть доступа на /api/**

• При создании / редактировании юзеров пароль должен шифроваться

• При успешном создании пользователя нужен редирект на общую таблицу

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -431,6 +431,7 @@
                 throw new Error('Ошибка создания пользователя');
             }
             document.getElementById('createUserForm').reset();
+            document.getElementById('users-tab').click();
             await loadUsers(); // Перезагружаем список пользователей
         } catch (error) {
             console.error('Ошибка:', error);
