Не используй EAGER
• Соблюдай структуру классов: поля -> конструктор -> методы -> ивкилс, хэшкод и туСтринг в самом конце

• У User'а не должно быть доступа на /api/**

• При создании / редактировании юзеров пароль должен шифроваться

• При успешном создании пользователя нужен редирект на общую таблицу

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -49,7 +49,7 @@
 <!-- Скрипт для загрузки информации о пользователе -->
 <script>
     document.addEventListener('DOMContentLoaded', async () => {
-        const response = await fetch('/users/current');
+        const response = await fetch('/current');
         const user = await response.json();
 
         document.getElementById('usernameDisplay').textContent = user.username;
